--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 #context
 server.servlet.context-path=/lab007
 
-#datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/moneynote?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#datasource - LOCAOHOST
+#spring.datasource.url=jdbc:mysql://localhost:3306/moneynote?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#datasource - HEROKU
+spring.datasource.url=jdbc:mysql://vvfv20el7sb2enn3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/mj3973y2uib0k53n?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=whbxop95feg32cry
+spring.datasource.password=q9a13nd2fr05hz3u
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 #mybatis
 mybatis.mapper-locations=classpath*:tw/ccli0709/lab007/mapper/**/*Mapper.xml
